DOCS: various enhancements (#55)
* DOCS: Re-add back Gemini example

* DOCS: Add release docs

* DOCS: remove duplicate docs

* DOCS: Update README with links to documentation, user guides, and examples

* DOCS: fix location of PR template

---------

Co-authored-by: Matthew Wong <wong.matthew@bcg.com>
Co-authored-by: Sean Anggani <seanggani@gmail.com>
Co-authored-by: Andy Moon <moon.andy@bcg.com>

--- a/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
+++ b/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
@@ -79,7 +79,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "a94d45b0-ecbf-4527-adf9-3a37647e6b86",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-15T15:38:14.780864Z",
+     "start_time": "2024-07-15T15:37:54.718555Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import artkit.api as ak\n",
@@ -357,11 +362,56 @@
   {
    "cell_type": "markdown",
    "id": "4699fb74-5662-458a-9817-f3ce6104d76b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Google"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a504a3ee-ecf4-4849-8d33-77f239d926dd",
+   "metadata": {},
+   "source": [
+    "Gemini is a family of multimodal Gen AI models available through Vertex AI, Google's fully-managed AI development platform for building and using Gen AI. To interact with the Gemini API, install the Python library google-generativeai and generate a Gemini API key. For a list of currently available Gemini models, visit Gemini Models.\n",
+    "\n",
+    "Below we show how to instantiate a Gemini model class to interact with the Gemini API:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fd4781144f3b2cb",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-15T15:38:24.089590Z",
+     "start_time": "2024-07-15T15:38:24.080410Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 = 4 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize a Gemini chat model\n",
+    "gemini_chat_model = ak.CachedChatModel(\n",
+    "    model=ak.GeminiChat(\n",
+    "        api_key_env=\"GEMINI_API_KEY\",\n",
+    "        model_id=\"gemini-1.5-pro-latest\",\n",
+    "    ),\n",
+    "    database=\"cache/connecting_to_gemini_chat.db\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Send a message to the chat model and print the response\n",
+    "response = await gemini_chat_model.get_response(message=\"What is 2 + 2?\")\n",
+    "\n",
+    "print(response[0])"
    ]
   },
   {
@@ -406,7 +456,7 @@
    ],
    "source": [
     "import json\n",
-    "# Initialize a Gemini chat model\n",
+    "# Initialize a Titan chat model\n",
     "titan_bedrock_model = ak.CachedChatModel(\n",
     "    model=ak.TitanBedrockChat(\n",
     "        model_id = 'amazon.titan-text-lite-v1',\n",
