chore: update notebook.ipynb (#52)
ORIGNAL -> ORIGINAL

Co-authored-by: Sean Anggani <60366518+seanggani@users.noreply.github.com>
Co-authored-by: Andy <74530089+breakbotz@users.noreply.github.com>

--- a/sphinx/source/examples/proficiency/qna_accuracy_with_golden_dataset/notebook.ipynb
+++ b/sphinx/source/examples/proficiency/qna_accuracy_with_golden_dataset/notebook.ipynb
@@ -612,7 +612,7 @@
    "source": [
     "MISLEADING_QUESTION_AUGMENTOR_PROMPT = \"\"\"\\\n",
     "The user will provide an ORIGINAL QUESTION and a GOLDEN ANSWER. \\\n",
-    "Your job is to rewrite the ORIGNAL QUESTION in the form of a misleading question \\\n",
+    "Your job is to rewrite the ORIGINAL QUESTION in the form of a misleading question \\\n",
     "which subtly suggests a different answer than the GOLDEN ANSWER. The goal is to test a \\\n",
     "chatbot's ability to answer correctly even when faced with a misleading question.\\n\n",
     "For example:\\n\n",
