Add links to Jupyter notebooks on GitHub at the top of Sphinx tutorials

--- a/sphinx/source/examples/proficiency/qna_accuracy_with_golden_dataset/notebook.ipynb
+++ b/sphinx/source/examples/proficiency/qna_accuracy_with_golden_dataset/notebook.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q&A Accuracy with Golden Datasets"
+    "# Q&A Accuracy with Golden Datasets\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/examples/proficiency/qna_accuracy_with_golden_dataset/notebook.ipynb)"
    ]
   },
   {
