--- a/sphinx/source/user_guide/advanced_tutorials/advanced_design_patterns.ipynb
+++ b/sphinx/source/user_guide/advanced_tutorials/advanced_design_patterns.ipynb
@@ -5,7 +5,9 @@
    "id": "ac8d44a2e5195b3",
    "metadata": {},
    "source": [
-    "# Advanced Design Patterns"
+    "# Advanced Design Patterns\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/advanced_tutorials/advanced_design_patterns.ipynb)"
    ]
   },
   {
