--- a/sphinx/source/user_guide/advanced_tutorials/prompt_formatting.ipynb
+++ b/sphinx/source/user_guide/advanced_tutorials/prompt_formatting.ipynb
@@ -5,7 +5,9 @@
    "id": "d797d2a1-2da5-4272-99f8-8894c1419788",
    "metadata": {},
    "source": [
-    "# Prompt Formatting"
+    "# Prompt Formatting\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/advanced_tutorials/prompt_formatting.ipynb)"
    ]
   },
   {
