--- a/sphinx/source/user_guide/evaluation_and_analysis/interpreting_run_results.ipynb
+++ b/sphinx/source/user_guide/evaluation_and_analysis/interpreting_run_results.ipynb
@@ -5,7 +5,9 @@
    "id": "ef022dcb-8205-426b-b7ec-80cc0b705568",
    "metadata": {},
    "source": [
-    "# Interpreting Run Results"
+    "# Interpreting Run Results\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/evaluation_and_analysis/interpreting_run_results.ipynb)"
    ]
   },
   {
