--- a/sphinx/source/user_guide/generating_challenges/multi_turn_personas.ipynb
+++ b/sphinx/source/user_guide/generating_challenges/multi_turn_personas.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multi-Turn Personas"
+    "# Multi-Turn Personas\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/generating_challenges/multi_turn_personas.ipynb)"
    ]
   },
   {
