--- a/sphinx/source/user_guide/introduction_to_artkit/building_your_first_artkit_pipeline.ipynb
+++ b/sphinx/source/user_guide/introduction_to_artkit/building_your_first_artkit_pipeline.ipynb
@@ -5,7 +5,9 @@
    "id": "563768a5-cf56-4ccd-9db7-cdfe2a117654",
    "metadata": {},
    "source": [
-    "# Building Your First ARTKIT Pipeline"
+    "# Building Your First ARTKIT Pipeline\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/introduction_to_artkit/building_your_first_artkit_pipeline.ipynb)"
    ]
   },
   {
