--- a/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
+++ b/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
@@ -5,7 +5,9 @@
    "id": "fd903360",
    "metadata": {},
    "source": [
-    "# Connecting to Gen AI Models"
+    "# Connecting to Gen AI Models\n",
+    "\n",
+    "[View notebook on GitHub]([View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/advanced_tutorials/json_output_validation.ipynb))"
    ]
   },
   {
