--- a/sphinx/source/examples/equitability/bias_detection_with_counterfactual_experiment/notebook.ipynb
+++ b/sphinx/source/examples/equitability/bias_detection_with_counterfactual_experiment/notebook.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bias Testing: Resume Scoring"
+    "# Bias Testing: Resume Scoring\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/examples/equitability/bias_detection_with_counterfactual_experiment/notebook.ipynb)"
    ]
   },
   {
