--- a/sphinx/source/examples/proficiency/single_turn_persona_brand_conformity/notebook.ipynb
+++ b/sphinx/source/examples/proficiency/single_turn_persona_brand_conformity/notebook.ipynb
@@ -5,7 +5,9 @@
    "id": "4ac9a7f9",
    "metadata": {},
    "source": [
-    "# Single-Turn Personas: Brand Conformity"
+    "# Single-Turn Personas: Brand Conformity\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/examples/proficiency/single_turn_persona_brand_conformity/notebook.ipynb)"
    ]
   },
   {
