--- a/sphinx/source/examples/safety/chatbot_safety_with_adversarial_augmentation/notebook.ipynb
+++ b/sphinx/source/examples/safety/chatbot_safety_with_adversarial_augmentation/notebook.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Single-Turn Attacks: Augmenting BeaverTails"
+    "# Single-Turn Attacks: Augmenting BeaverTails\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/examples/safety/chatbot_safety_with_adversarial_augmentation/notebook.ipynb)"
    ]
   },
   {
