--- a/sphinx/source/examples/safety/chatbot_safety_with_adversarial_augmentation/supplementary/sample_beavertails_data.ipynb
+++ b/sphinx/source/examples/safety/chatbot_safety_with_adversarial_augmentation/supplementary/sample_beavertails_data.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Adversarial Prompts Dataset from BeaverTails Dataset"
+    "# Create Adversarial Prompts Dataset from BeaverTails Dataset\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/examples/safety/chatbot_safety_with_adversarial_augmentation/supplementary/sample_beavertails_data.ipynb)"
    ]
   },
   {
