--- a/sphinx/source/examples/security/single_and_multiturn_prompt_exfiltration/notebook.ipynb
+++ b/sphinx/source/examples/security/single_and_multiturn_prompt_exfiltration/notebook.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Single and Multi-Turn Attacks: Prompt Exfiltration"
+    "# Single and Multi-Turn Attacks: Prompt Exfiltration\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/examples/security/single_and_multiturn_prompt_exfiltration/notebook.ipynb)"
    ]
   },
   {
