--- a/sphinx/source/user_guide/advanced_tutorials/cache_management.ipynb
+++ b/sphinx/source/user_guide/advanced_tutorials/cache_management.ipynb
@@ -5,7 +5,9 @@
    "id": "0f116a33-2da9-4a6c-83d8-3316cda737e2",
    "metadata": {},
    "source": [
-    "# Cache Management"
+    "# Cache Management\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/advanced_tutorials/cache_management.ipynb)"
    ]
   },
   {
