--- a/sphinx/source/user_guide/advanced_tutorials/creating_new_model_classes.ipynb
+++ b/sphinx/source/user_guide/advanced_tutorials/creating_new_model_classes.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating New Model Classes"
+    "# Creating New Model Classes\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/advanced_tutorials/creating_new_model_classes.ipynb)"
    ]
   },
   {
