--- a/sphinx/source/user_guide/advanced_tutorials/json_output_validation.ipynb
+++ b/sphinx/source/user_guide/advanced_tutorials/json_output_validation.ipynb
@@ -5,7 +5,9 @@
    "id": "d0b98ee1-cb0f-4ff2-bb18-79b1cdd1b7d2",
    "metadata": {},
    "source": [
-    "# JSON Output Validation"
+    "# JSON Output Validation\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/advanced_tutorials/json_output_validation.ipynb)"
    ]
   },
   {
