--- a/sphinx/source/user_guide/evaluation_and_analysis/evaluator_design.ipynb
+++ b/sphinx/source/user_guide/evaluation_and_analysis/evaluator_design.ipynb
@@ -5,7 +5,9 @@
    "id": "52cda0b2-415d-4199-bd53-c244e360f839",
    "metadata": {},
    "source": [
-    "# Evaluator Design"
+    "# Evaluator Design\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/evaluation_and_analysis/evaluator_design.ipynb)"
    ]
   },
   {
