--- a/sphinx/source/user_guide/generating_challenges/prompt_augmentation.ipynb
+++ b/sphinx/source/user_guide/generating_challenges/prompt_augmentation.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prompt Augmentation"
+    "# Prompt Augmentation\n",
+    "\n",
+    "[View notebook on GitHub](https://github.com/BCG-X-Official/artkit/blob/1.0.x/sphinx/source/user_guide/generating_challenges/prompt_augmentation.ipynb)"
    ]
   },
   {
