DOCS: Fix release notes (#67)
* DOCS: Fix release notes

* DOC: Add Amazon in front of the model connections

* DOCS: Add more detail to 1.0.3 release note

--- a/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
+++ b/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
@@ -32,7 +32,7 @@
     "- [Groq](https://groq.com/) - *Text only*\n",
     "- [Google's Gemini](https://gemini.google.com/?utm_source=google&utm_medium=cpc&utm_campaign=2024enUS_gemfeb&gad_source=1&gclid=Cj0KCQjwpNuyBhCuARIsANJqL9MyZ6ryxPne5jK3hH8f8rRi9ACTUcbroOcdrJB2OaiLR6yTGMMfozwaArcyEALw_wcB) - *Text only*\n",
     "- [Hugging Face](https://huggingface.co/) - *Text only*\n",
-    "- [Titan](https://docs.aws.amazon.com/bedrock/latest/userguide/titan-models.html) - *Text only*\n",
+    "- [Amazon's Titan](https://docs.aws.amazon.com/bedrock/latest/userguide/titan-models.html) - *Text only*\n",
     "\n",
     "Key benefits of using ARTKIT model classes include: \n",
     "\n",
