API/add http interface (#57)
* API: Add ABCs for custom endpoints

* API: Add tests for custom endpoints

* DOCS: Add Custom Connector to Release Notes

* API: WIP Modify retry decorator and subclass CustomChatEndpointConnector from ChatModel

* FIX: Added missing testing dependency

* API: Refactored custom endpoint connector

* FIX: Removed unused variables

* FEAT: Updated hugging face url chat to use httpx

* FEAT: Updated bedrock connector to use httpx and to support chat history

* DOC: Added httpx to requirements

* FEAT: Updated custom http diffusion connector

* DOC: Updated creating new model classes guide

* FIX: Fixed issue with concurrent client usage

* FIX: Create new client instance per request

* FEAT: Cache async clients per event loop via weak key mapping

* BUILD: fix version to match latest main's

---------

Co-authored-by: Andy <74530089+breakbotz@users.noreply.github.com>
Co-authored-by: AlexanderLontke <lontke.alexander@yahoo.com>
Co-authored-by: Alexander Lontke <77338841+AlexanderLontke@users.noreply.github.com>
Co-authored-by: Andy Moon <moon.andy@bcg.com>

--- a/sphinx/source/user_guide/advanced_tutorials/creating_new_model_classes.ipynb
+++ b/sphinx/source/user_guide/advanced_tutorials/creating_new_model_classes.ipynb
@@ -319,17 +319,187 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Calling custom endpoints via HTTP\n",
+    "\n",
+    "ARTKIT offers support for sending HTTP requests to any endpoint.  You will need to subclass a version of `HTTPXChatConnector` (which implements the `ChatModelConnector` class).  It has native support for exponential retries if you do not specify any keyword arguments into the constructor (but can be customized to specific retry requirements for the endpoint at hand). Under the hood it uses the `http.AsyncClient` to make requests to your endpoint. You can also pass a dictonary of client key word arguments for example to specify a read timeout:\n",
+    "\n",
+    "````python\n",
+    "from httpx import Timeout\n",
+    "\n",
+    "client_kwargs = dict(timeout=Timeout(10.0, read=10.0))\n",
+    "chat_model = YourImplementedClass(\n",
+    "    model_id=\"http://test.url/api/v1/\",\n",
+    "    httpx_client_kwargs=client_kwargs,\n",
+    ")\n",
+    "````\n",
+    "\n",
+    "With the abstract `HTTPXChatConnector` class most ARTKIT specific implementation detail are already taken care of. All you need to implement are the following functions:\n",
+    "\n",
+    "````python\n",
+    "def get_default_api_key_env(cls) -> str:\n",
+    "    # returns the defaul environment variable name\n",
+    "    # under which you keep your API Key if needed\n",
+    "\n",
+    "def build_request_arguments(\n",
+    "        self,\n",
+    "        message: str,\n",
+    "        *,\n",
+    "        history: ChatHistory | None = None,\n",
+    "        **model_params: dict[str, Any],\n",
+    "    ) -> dict[str, Any]:\n",
+    "    # \"Translates\" the ARTKIT input to an httpx.request input\n",
+    "\n",
+    "def parse_httpx_response(\n",
+    "    self,\n",
+    "    response: Response,\n",
+    ") -> list[str]\n",
+    "    # \"Translates\" the httpx.request output to an ARTKIT output\n",
+    "\n",
+    "````\n",
+    "\n",
+    "To make things a bit more concrete we provide an example using the REST API provided by OpenAI but you can also look at the implementations of `ak.HUggingFaceURLChat` and `ak.BaseBedrockChat`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2 + 2 equals 4.']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from typing import Any\n",
+    "\n",
+    "from httpx import Response\n",
+    "from artkit.model.llm.base import HTTPXChatConnector\n",
+    "from artkit.model.llm.history import ChatHistory\n",
+    "\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "\n",
+    "class OpenAIChatConnector(HTTPXChatConnector):\n",
+    "    def __init__(self, model_id: str, model_name: str, **kwargs):\n",
+    "        \"\"\"\n",
+    "        For this specific example, the OpenAI API endpoint requires a specific model name and thus, a model_name has been added to the constructor.\n",
+    "        \"\"\"\n",
+    "        super().__init__(model_id=model_id, **kwargs)\n",
+    "        self.model_name = model_name\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_default_api_key_env(cls) -> str:\n",
+    "        \"\"\"\n",
+    "        Get the default name of the environment variable that holds the API key.\n",
+    "\n",
+    "        :return: the default name of the api key environment variable\n",
+    "        \"\"\"\n",
+    "        return \"OPENAI_API_KEY\"\n",
+    "\n",
+    "\n",
+    "    def build_request_arguments(\n",
+    "        self,\n",
+    "        message: str,\n",
+    "        *,\n",
+    "        history: ChatHistory | None = None,\n",
+    "        **model_params: dict[str, Any],\n",
+    "    ) -> dict[str, Any]:\n",
+    "        \"\"\"\n",
+    "        This method is responsible for formatting the input to the LLM chat system.\n",
+    "        For argument options see :class:`httpx.AsyncClient.request`.\n",
+    "\n",
+    "        :param message: The input message to format.\n",
+    "        :param history: The chat history preceding the message.\n",
+    "        :param model_params: Additional parameters for the chat system.\n",
+    "\n",
+    "        :return:\n",
+    "        \"\"\"\n",
+    "        messages = []\n",
+    "        if self.system_prompt:\n",
+    "            messages.append(\n",
+    "                {\n",
+    "                    \"role\": \"system\",\n",
+    "                    \"content\": self.system_prompt\n",
+    "                }\n",
+    "            )\n",
+    "        if history:\n",
+    "            messages.extend(\n",
+    "                [\n",
+    "                    {\n",
+    "                        \"role\": message.role,\n",
+    "                        \"content\": message.text,\n",
+    "                    }\n",
+    "                    for message in history.messages\n",
+    "                ]\n",
+    "            )\n",
+    "        messages.append(\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": message\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "        request_body = json.dumps({\n",
+    "            \"model\": self.model_name,\n",
+    "            \"messages\": messages,\n",
+    "            **{**self.get_model_params(), **model_params},\n",
+    "        })\n",
+    "        return dict(\n",
+    "            method=\"POST\",\n",
+    "            url=self.model_id,\n",
+    "            headers={\n",
+    "                \"Authorization\": f\"Bearer {self.get_api_key()}\",\n",
+    "                \"Content-Type\": \"application/json\",\n",
+    "            },\n",
+    "            data=request_body,\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "    def parse_httpx_response(self, response: Response) -> list[str]:\n",
+    "        \"\"\"\n",
+    "        This method is responsible for formatting the :class:`httpx.Response` after\n",
+    "        having made the request.\n",
+    "\n",
+    "        :param response: The response from the endpoint.\n",
+    "        :return: A list of formatted response strings.\n",
+    "        \"\"\"\n",
+    "        response_json = response.json()\n",
+    "        return [response_json['choices'][0]['message']['content']] if 'choices' in response_json else []\n",
+    "\n",
+    "\n",
+    "openai_chat = OpenAIChatConnector(model_id=\"https://api.openai.com/v1/chat/completions\", model_name=\"gpt-4o\")\n",
+    "prompt = \"What is 2+2?\"\n",
+    "response = await openai_chat.get_response(message=prompt)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## AWS Bedrock Specifics\n",
     "\n",
-    "For AWS Bedrock requests, as long as valid credentials are [in-place](https://docs.aws.amazon.com/cli/v1/userguide/cli-configure-files.html), ARTKIT will handle API request signing.  You will need to ensure that that an appropriate AWS account is set-up and that a user within that account has the right IAM policies to access the foundational models that you wish to use.\n",
+    "The AWS Bedrock integration is also based on the `HTTPXCustomChat`.\n",
     "\n",
-    "Additionally, you will need to implement specific I/O parsing for calls to those foundational models as each foundational model has distinct request and response payloads.\n",
+    "For AWS Bedrock requests, as long as valid credentials are [in-place](https://docs.aws.amazon.com/cli/v1/userguide/cli-configure-files.html), ARTKIT will handle that all necessary properties are set for API request signing.  You will need to ensure that that an appropriate AWS account is set-up and that a user within that account has the right IAM policies to access the foundational models that you wish to use.\n",
+    "\n",
+    "Additionally, you will need to implement specific I/O parsing for calls to those foundational models as each foundational model has distinct request and response payloads (i.e., `build_request_arguments` and `parse_httpx_response`).\n",
     "\n",
     "The goal is to illustrate how we would do that with the existing code.\n",
     "\n",
     "A `BaseBedrockChat` has two required parameters: `model_id` and `region` corresponding to the specific foundational model and region that you wish to make API calls to.  Unlike the other functionality with other components in ARTKIT, the model parameters are submitted via a JSON payload and the `invoke_model` API [see here](https://docs.aws.amazon.com/bedrock/latest/APIReference/API_runtime_InvokeModel.html)\n",
     "\n",
-    "To implement a specific payload for another AWS Foundational Model, the following method will need to be implemented:"
+    "To implement a specific payload for another AWS Foundational Model, the following methods will need to be implemented:"
    ]
   },
   {
@@ -341,12 +511,22 @@
     "# Using Claude as an example\n",
     "from typing import Any\n",
     "\n",
-    "from .base import BaseBedrockChat\n",
+    "from artkit.model.llm.bedrock.base import BaseBedrockChat\n",
     "\n",
     "class ClaudeBedrockChat(BaseBedrockChat):\n",
+    "    async def build_request_arguments(\n",
+    "        self,\n",
+    "        message: str,\n",
+    "        *,\n",
+    "        history: ChatHistory | None = None,\n",
+    "        **model_params: dict[str, Any],\n",
+    "    ) -> dict[str, Any]:\n",
+    "        # your implementation here\n",
+    "        pass\n",
     "\n",
-    "    def _responses_from_body(self, response_body: dict[str, Any]) -> list[str]:\n",
-    "        # your implementation here"
+    "    def parse_httpx_response(self, response: Response) -> list[str]:\n",
+    "        # your implementation here\n",
+    "        pass"
    ]
   }
  ],
@@ -366,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
