--- a/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
+++ b/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
@@ -32,7 +32,7 @@
     "- [Groq](https://groq.com/) - *Text only*\n",
     "- [Google's Gemini](https://gemini.google.com/?utm_source=google&utm_medium=cpc&utm_campaign=2024enUS_gemfeb&gad_source=1&gclid=Cj0KCQjwpNuyBhCuARIsANJqL9MyZ6ryxPne5jK3hH8f8rRi9ACTUcbroOcdrJB2OaiLR6yTGMMfozwaArcyEALw_wcB) - *Text only*\n",
     "- [Hugging Face](https://huggingface.co/) - *Text only*\n",
-    "- [Amazon's Titan](https://docs.aws.amazon.com/bedrock/latest/userguide/titan-models.html) - *Text only*\n",
+    "- [Titan](https://docs.aws.amazon.com/bedrock/latest/userguide/titan-models.html) - *Text only*\n",
     "\n",
     "Key benefits of using ARTKIT model classes include: \n",
     "\n",
@@ -83,8 +83,8 @@
    "id": "a94d45b0-ecbf-4527-adf9-3a37647e6b86",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-15T15:38:14.780864Z",
-     "start_time": "2024-07-15T15:37:54.718555Z"
+     "end_time": "2024-08-01T18:30:10.633013Z",
+     "start_time": "2024-08-01T18:30:08.559540Z"
     }
    },
    "outputs": [],
@@ -444,15 +444,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best JavaScript framework is the one that you are familiar with and that you can use to create the desired functionality.\n",
-      "\n",
-      "The best framework for you will depend on your experience and the complexity of the project you are working on.\n",
-      "\n",
-      "Some popular JavaScript frameworks include:\n",
-      "\n",
-      "1. jQuery (a JavaScript library): jQuery is a popular and widely used JavaScript library for handling events, manipulating the DOM, and performing AJAX operations. It provides a wide range of features and is easy to learn and use.\n",
-      "\n",
-      "2. React (a JavaScript library): React is a popular JavaScript library for building user interfaces. It is designed to be\n"
+      "{\"inputText\": \"What is the best Javascript framework?\"}\n",
+      "{}\n",
+      "There are many frameworks available for JavaScript development. Some of the popular ones are AngularJS, ReactJS, VueJS, and EmberJS. Each framework has its own strengths and weaknesses, and the best choice depends on the specific needs of the project. AngularJS is known for its strong MVC structure, reactive programming, and large ecosystem of libraries and tools. ReactJS is known for its component-based architecture, declarative programming, and performance. VueJS is known for its simplicity, flexibility, and performance. EmberJS is known for its component-based architecture, declarative programming, and integration with other frameworks.\n"
      ]
     }
    ],
@@ -463,7 +457,7 @@
     "    model=ak.TitanBedrockChat(\n",
     "        model_id = 'amazon.titan-text-lite-v1',\n",
     "        region='us-east-1'),\n",
-    "    database=\"cache/connecting_to_titan.db\",\n",
+    "    database=\"cache/connecting_to_titan1.db\",\n",
     ")\n",
     "\n",
     "\n",
