--- a/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
+++ b/sphinx/source/user_guide/introduction_to_artkit/connecting_to_genai_models.ipynb
@@ -35,6 +35,7 @@
         "- [Amazon's Titan](https://docs.aws.amazon.com/bedrock/latest/userguide/titan-models.html) - *Text only*\n",
         "\n",
         "We also support connectivity to GenAI platforms like:\n",
+        "- [Azure OpenAI Service](https://azure.microsoft.com/en-us/products/ai-services/openai-service)\n",
         "- [Amazon Bedrock](https://aws.amazon.com/bedrock)\n",
         "- [Google Vertex AI](https://cloud.google.com/vertex-ai)\n",
         "\n",
@@ -362,6 +363,87 @@
         "\n",
         "# Send a message to the chat model and print the response\n",
         "response = await groq_chat_model.get_response(message=\"What is 2 + 2\")\n",
+        "\n",
+        "print(response[0])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b780a3a6",
+      "metadata": {},
+      "source": [
+        "# Azure OpenAI\n",
+        "\n",
+        "Azure OpenAI Service provides REST API access to OpenAI's powerful language models and Embeddings model series, deployed on Azure.\n",
+        "\n",
+        "Here's an example of how to deploy your own LLMs & Embedding models in Azure OpenAI & connecting to them:\n",
+        "\n",
+        "## Deploy your LLM using Azure OpenAI Studio\n",
+        "\n",
+        "Here, we'll deploy a set up Azure OpenAI Studio & GPT-3.5.Turbo model:\n",
+        "\n",
+        "### Prerequisites:\n",
+        "\n",
+        "1. Sign up for an Azure account if you don’t have one. You can create a free account [here](https://azure.microsoft.com/free/ai-services).\n",
+        "2. Go to [Azure Portal](https://portal.azure.com/?microsoft_azure_marketplace_ItemHideKey=microsoft_openai_tip#create/Microsoft.CognitiveServicesOpenAI)\n",
+        "3. Create a new resource:\n",
+        "    - Click on “Create a resource”.\n",
+        "    - Search for “Azure OpenAI”.\n",
+        "    - Click “Create” and fill in the necessary details like Subscription, Resource Group, Region, and Name.\n",
+        "    - After filling in the details, click “Review + create” and then “Create”.\n",
+        "4. The Azure portal displays a notification when the new resource is available. Select Go to resource.\n",
+        "\n",
+        "### Deploying the LLM\n",
+        "1. Sign in to [Azure OpenAI Studio](https://oai.azure.com/)\n",
+        "2. Choose the subscription and the Azure OpenAI resource to work with, and select Use resource.\n",
+        "3. Under \"Shared Resources\" select Deployments.\n",
+        "4. Select \"+ Deploy model\" & then select \"Deploy base model\".\n",
+        "5. Select the \"gpt-35-turbo\" model & hit Confirm\n",
+        "6. Enter an appropriate \"Deployment name\" (this is important & will be used later) & hit \"Deploy\" _[feel free to let the remaining setting stay default]_\n",
+        "\n",
+        "### Connecting to your Deployed LLM\n",
+        "\n",
+        "In Azure OpenAI Studio, click on the subscription dropdown next to your profile image on top right corner.\n",
+        "From here, you will find the:\n",
+        "- Endpoint\n",
+        "- API Key\n",
+        "\n",
+        "You can find the appropriate OpenAI API version from [here](https://learn.microsoft.com/en-us/azure/ai-services/openai/reference) (select the one available for \"Data plane - inference\")\n",
+        "\n",
+        "Add these values to your `.env` file as follows:\n",
+        "\n",
+        "```\n",
+        "AZURE_OPENAI_API_KEY=<API Key>\n",
+        "AZURE_OPENAI_ENDPOINT=<Endpoint>\n",
+        "AZURE_OPENAI_DEPLOYMENT=<Deployment name (from earlier)>\n",
+        "OPENAI_API_VERSION=<OpenAI API version>\n",
+        "```\n",
+        "\n",
+        "You are now all set! You should be able to run the below Azure OpenAI chat model and connect to the model you need."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b8da1c98",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "from dotenv import load_dotenv\n",
+        "\n",
+        "load_dotenv()\n",
+        "\n",
+        "# Initialize an Azure OpenAI chat model\n",
+        "azure_openai_chat_model = ak.CachedChatModel(\n",
+        "    model=ak.AzureOpenAIChat(\n",
+        "        model_id=os.getenv(\"AZURE_OPENAI_DEPLOYMENT\"),\n",
+        "    ),\n",
+        "    database=\"cache/connecting_to_azure_openai_chat.db\"\n",
+        ")\n",
+        "\n",
+        "# Send a message to the chat model and print the response\n",
+        "response = await azure_openai_chat_model.get_response(message=\"What is 2 + 2?\")\n",
         "\n",
         "print(response[0])"
       ]
@@ -926,7 +1008,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "artkit-env",
       "language": "python",
       "name": "python3"
     },
@@ -940,7 +1022,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.4"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
